# UBB-FMI

./: README.md
Advanced-Methods-of-Programming/Cursuri/: Curs11-Examples.rar
Computational-Logic/: Teorie.docx
Computational-Logic/ProiectLCTemaFacultativa/: Documentatie LC Tema facultativa.docx
Computer-Networks/: Teorie.txt
Computer-Systems-Architecture/Labs/: Flags.asm  Lab10_tema2.asm  Lab11_pb14.asm  Lab12_clasa.asm  Lab2_ex2.asm  Lab2_ex3.asm  Lab2_ex7.asm  Lab4_clasa1.asm  Lab4_ex1.asm  Lab4_ex2.asm  Lab5_clasa1.asm  Lab5_tema.asm  Lab6_clasa1.asm  Lab6_tema.asm  Problema subiect 2.asm  main.c  main1.c  modul_altul.asm  modul_lab11.asm  test.asm  test_ASC.asm  vedem_daca_e_ok.asm
Graph-Algorithms/: Algoritmi.txt
Mathematical-Analysis/: Trigonometrie Formule.docx
Object-Oriented-Programming/: Link-uri Istvan YouTube.txt  README.md
S2-Graph-Algorithms/: Toti Algoritmii Grafuri Aprox.txt
S2-Operating-Systems/: ExamenSO2023.txt
S3-Computer-Networks/: Link Cursuri Pandemie.txt
S5-Formal-Languages-and-Compiler-Techniques/Laboratoare/Lab2Partea2/: AutomatFinitBinaries.cpp  AutomatFinitBinaries.h  AutomatFinitConstanteReale.cpp  AutomatFinitConstanteReale.h  AutomatFinitDecimal.cpp  AutomatFinitDecimal.h  AutomatFinitHexa.cpp  AutomatFinitHexa.h  AutomatFinitIdentificatori.cpp  AutomatFinitIdentificatori.h  AutomatFinitOctal.cpp  AutomatFinitOctal.h  CMakeLists.txt  ConstanteReale.txt  FIP.h  Identificatori.txt  Literali.txt  TS.cpp  TS.h  atomiLexicali.txt  data.txt  data_fara_spatii.txt  fip.txt  main.cpp  ts.txt
S6-Game-Development/: README.md
(+2462 files in other folders)
