cmake_minimum_required(VERSION 3.24)
project(Lab2Partea2)

set(CMAKE_CXX_STANDARD 17)

add_executable(Lab2Partea2 main.cpp FIP.cpp FIP.h TS.cpp TS.h AutomatFinitIdentificatori.cpp AutomatFinitConstanteReale.cpp AutomatFinitConstanteReale.h AutomatFinitDecimal.cpp AutomatFinitDecimal.h AutomatFinitOctal.cpp AutomatFinitOctal.h AutomatFinitHexa.cpp AutomatFinitHexa.h AutomatFinitBinaries.cpp AutomatFinitBinaries.h)
